trunk/Archive2/b5/e00cc56ee02be6/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <iostream> 
   ^
main.cpp:16:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << cadena1 <<  " \ " ) es "  << num1 <<  ' \ n ' ; 
     ^
main.cpp:16:85: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << cadena1 <<  " \ " ) es "  << num1 <<  ' \ n ' ; 
                                                                                     ^
main.cpp:16:85: warning: multi-character character constant [-Wmultichar]
main.cpp:17:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
     ^
main.cpp:17:82: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:17:82: warning: multi-character character constant [-Wmultichar]
main.cpp:18:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
     ^
main.cpp:18:82: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:18:82: warning: multi-character character constant [-Wmultichar]
main.cpp:19:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << str4 <<  " \ " ) es "  << num4 <<  ' \ n ' ; 
     ^
main.cpp:19:82: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << str4 <<  " \ " ) es "  << num4 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:19:82: warning: multi-character character constant [-Wmultichar]
main.cpp: In function 'int principal()':
main.cpp:6:12: error: 'caracteres' does not name a type
     const  caracteres  * cadena1 =  "42" ; 
            ^
main.cpp:7:12: error: 'caracteres' does not name a type
     const  caracteres  * str2 =  "3.14159" ; 
            ^
main.cpp:8:12: error: 'caracteres' does not name a type
     const  caracteres  * str3 =  "31337 con las palabras" ; 
            ^
main.cpp:9:12: error: 'carac' does not name a type
     const  carac  * Str4 =  "palabras y 2" ;
            ^
main.cpp:11:30: error: 'cadena1' was not declared in this scope
     int num1 = std :: atoi ( cadena1 ) ; 
                              ^
main.cpp:12:30: error: 'str2' was not declared in this scope
     int num2 = std :: atoi ( str2 ) ; 
                              ^
main.cpp:13:30: error: 'str3' was not declared in this scope
     int num3 = std :: atoi ( str3 ) ; 
                              ^
main.cpp:14:30: error: 'str4' was not declared in this scope
     int num4 = std :: atoi ( str4 ) ;
                              ^
main.cpp:16:5: error: 'cout' is not a member of 'std'
     std :: cout  <<  "std :: atoi ( \ " "  << cadena1 <<  " \ " ) es "  << num1 <<  ' \ n ' ; 
     ^
main.cpp:16:63: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << cadena1 <<  " \ " ) es "  << num1 <<  ' \ n ' ; 
                                                               ^
main.cpp:17:5: error: 'cout' is not a member of 'std'
     std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
     ^
main.cpp:17:60: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << cad2 <<  " \ " ) es "  << num2 <<  ' \ n ' ; 
                                                            ^
main.cpp:18:5: error: 'cout' is not a member of 'std'
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
     ^
main.cpp:18:60: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) es "  << num3 <<  ' \ n ' ; 
                                                            ^
main.cpp:19:5: error: 'cout' is not a member of 'std'
     std :: cout  <<  "std :: atoi ( \ " "  << str4 <<  " \ " ) es "  << num4 <<  ' \ n ' ; 
     ^
main.cpp:19:60: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "std :: atoi ( \ " "  << str4 <<  " \ " ) es "  << num4 <<  ' \ n ' ; 
                                                            ^
main.cpp:20:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
